-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17, 18, 20, 21, 22
-
Component/s: hotspot
-
b06
-
ppc, x86_64
-
linux_ubuntu
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8332549 | 21.0.5-oracle | Calvin Cheung | P4 | Resolved | Fixed | b01 |
| JDK-8329171 | 21.0.4 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8329172 | 17.0.12 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
gtest/LargePageGtests.java#use-large-pages
Here's a snippet from the log file:
[ RUN ] os.release_one_mapping_multi_commits_vm
A
Range [7f129cc2e000-7f129dc2e000) contains: 7f129cc2e000-7f129d02e000 rw-p 00000000 00:00 0
7f129d02e000-7f129d42e000 ---p 00000000 00:00 0
7f129d42e000-7f129d82e000 rw-p 00000000 00:00 0
7f129d82e000-7f129dc2e000 ---p 00000000 00:00 0
B
Range [7f129cc2e000-7f129dc2e000) contains: nothing.
open/test/hotspot/gtest/runtime/test_os.cpp:504: Failure
Expected equality of these values:
p2
Which is: NULL
p
Which is: 0x7f129cc2e000
[ FAILED ] os.release_one_mapping_multi_commits_vm (49 ms)
- backported by
-
JDK-8329171 gtest/LargePageGtests.java#use-large-pages failed "os.release_one_mapping_multi_commits_vm"
-
- Resolved
-
-
JDK-8329172 gtest/LargePageGtests.java#use-large-pages failed "os.release_one_mapping_multi_commits_vm"
-
- Resolved
-
-
JDK-8332549 gtest/LargePageGtests.java#use-large-pages failed "os.release_one_mapping_multi_commits_vm"
-
- Resolved
-
- relates to
-
JDK-8263464 NMT: assert in gtest os.release_multi_mappings_vm
-
- Closed
-
-
JDK-8316393 gtest/LargePageGtests.java#use-large-pages-sysV fails os.release_multi_mappings_vm
-
- Closed
-
- links to
-
Commit
openjdk/jdk17u-dev/f52725d4
-
Commit
openjdk/jdk21u-dev/e3f36477
-
Commit
openjdk/jdk/66520be7
-
Review
openjdk/jdk17u-dev/2325
-
Review
openjdk/jdk21u-dev/406
-
Review(master)
openjdk/jdk/16240